--- a/recette.html
+++ b/recette.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
     <title>PREPARATION DE GATEAU</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
    <div class="categorie_centre recette"> <p class="recette"> Recette </p> </div> 
     <div class="contenu">
