--- a/index.html
+++ b/index.html
@@ -1,44 +1,26 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-    <title>PREPARATION DE GATEAU</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<body>
-   <div class="categorie_centre recette"> <p class="recette"> Recette </p> </div> 
-    <div class="contenu">
-    <h1>Recette du Gateau au chocolat </h1>
+  <head>
+    <title>Page Title</title>
+    <meta charset="utf-8">
 
-        <div class="separateur"><hr> </div>
-<p class="description"> Cette recette facile de préparation de chocolat est un grand classique , elle fera plaisir </p>
-aux gourmands </p>
-
-<div class="positionRelative">
-<img src="images/gateauAuChocolat.jpeg?id=45"  class="centre"></div>
-
-<div class="col_ingredients col_commune">
-    <h2>Ingrédients</h2>
-    <div class="categorie">
-        <p>Chocolat noir </p>
-        <p>Farine</p>
-        <p>Sucre </p>
-        <p>Beurre</p>
-        
-    </div>
-</div>
-<div class="col_preparation col_commune "> 
-<h2>Préparation</h2> 
-       <table class="tab_preparation">
-        <tr class="tr_droite"><td class="td_gauche">1</td> <td class="td_droite">Préchauffez le four th.6 (180°C)</td></tr>
-        <tr class="tr_droite"><td class="td_gauche">2</td> <td class="td_droite">Beurrez un moule à cake et versez-y la pâte. </td></tr>
-        <tr class="tr_droite"><td class="td_gauche">3</td> <td class="td_droite">Tournez et faites cuire le gâteau simple pendant environ 45 min</td></tr>
-        <tr class="tr_droite"><td class="td_gauche">4</td> <td class="td_droite">Surveillez la cuisson </td></tr>
-
-    </table> 
-</div>
-</div>
-<div>
-</div>
-</body>
-
+  </head>
+  <body>
+    <h1>This is a Heading</h1>
+    <p>This is a paragraph.</p>
+    <pre>
+      Bonjours les amis
+      comment allez-vous ? Ne
+      vous découragez pas 	Ê
+    euro = 15€
+    </pre>
+    <ul>
+      <li>FELICIA</li>
+      <li>Item 2</li>
+    </ul>
+    <ol>
+      <li>FELICIA</li>
+      <li>Item 2</li>
+    </ol>
+  </body>
 </html>
